--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     
     <div class="tabs__content">
       <div class="tabs__pane tabs__pane_show" id="content-1">
-        Содержимое 1...
+        <a href="https://google.com">Содержимое 1...</a>
       </div>
       <div class="tabs__pane" id="content-2">
         Содержимое 2...
